--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-ui-sortable/sortable.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/Angular-localStorage/src/angularLocalStorage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
